public/css/application.css
html
{
	min-height: 100vh;
	height: 100vh;
}
body
{
	min-height: 100vh !important;
	/* height: 100vh; */
	background-color:transparent;
	font-family: "Tahoma", "Arial", "Helvetica", serif !important;
	/* animation: rotating 6s linear infinite; */
}

.ya-see-me-rolling
{
	animation: rotating 6s linear 1;
}

.myMainContainerWrapper
{
	height: 100%;
	max-height: 100%;
	overflow: auto;
	padding-top: 10px;
}

a.hiddenLink
{ 
    color: inherit;
}

a.totallyHidden:hover,
a.totallyHidden:hover img,
a.totallyHidden:hover div,
a.totallyHidden:hover div div,
a.totallyHidden,
a.totallyHidden img,
a.totallyHidden div,
a.totallyHidden div div
{
    text-decoration: none !important;
}
.maxHeight
{
    height: 100%;
}
.maxWidth
{
    width: 100%;
}
.minWidth
{
    width: 1px;
}
.minHeight
{
    height: 1px;
}

.myModalDialog
{
    text-align: center;
}

.imageButton
{
    height: 40px;
    width: 35px;
    border: 1px solid #000000;
    padding: 3px;
}

.table
{
    display:table;
	border-collapse: collapse;
}

.trow
{
    display: table-row;
}
.cell
{
    display: table-cell;
}

img.button
{
    cursor: pointer;
}

.link:hover
{
    cursor: pointer;
}

div#settings
{
    background-color: #ffffff;
    border: 2px solid #c6c6c6;
    border-radius: 6px;
    padding: 10px;
}

div#settings div.wrapperContent
{
    margin: 10px;
}

footer
{
    text-align: center;
	display: block;
	background-color: #8e8e8e ;
	color: #ffffff;
	height: 40px;
	line-height: 25pt;
}

footer a
{
	color: #ffffff;
}

footer a:hover
{
	color: #82d77e;
	text-decoration: none;
}

#mainmenu {
    position: relative;
    z-index: 20;
}

.navbar-collapse.in,
.navbar-collapse.collapsing {
    background-color: #a9a9a9;
}

.navbar
{
	height: 50px;
	background-color: #8e8e8e;
	background-image: -webkit-linear-gradient(bottom, #aea9a9, #8e8e8e);
	background-image: -moz-linear-gradient(bottom, #aea9a9, #8e8e8e);
	font-size: 12pt;
}

.navbar div div ul
{
	float: right;
}


.navbar div div ul li a
{
	color: #ffffff;
	padding-left: 30px;
}

.navbar div div ul li
{
	height: 50px;
}


.loginLable{
	background-image: url(../image/maennchen.png);
	background-repeat: no-repeat;
	background-position: left;
}

.loginLable:hover{
	background-image: url(../image/maennchen_gruen.png);
	background-repeat: no-repeat;
}

.regLable{
	background-image: url(../image/mehrmaennchen.png);
	background-repeat: no-repeat;
	background-position: left;
}

.regLable:hover{
	background-image: url(../image/mehrmaennchen_gruen.png);
	background-repeat: no-repeat;
}


.navbar div div ul li a:hover
{
	color: #82d77e;
	background-color: transparent;
}

.header
{
	/* height: 115px; */
	width: 100%;
	margin-bottom: 10px;
}

.mainnav{
	height: 50px;
	background-color: #cfcccc;
}

nav {
	position: relative;
	z-index: 100;
}

.mainnav div{
	margin-left: 0;
	padding-left: 0;
}

#main-menu {
	background-color: rgba(173, 173, 173, 0.8);
}

.mainnav div ul li a
{
	font-size: 18pt;
	color: #ffffff;
}

.mainnav div ul li{

}

.mainnav div ul li a:hover
{
	background-color: #82E77e;
}

.mainNavigation li.active{
	background-color: #82d77e;
}

#logo{
	/* float: left; */
	/*background-image: url("../image/BikeStoreLogo.gif");*/
	/*background-repeat: no-repeat;*/
	/*background-size: cover;*/
	/*width: 85px;*/
	/*height: 85px;*/
	/*padding-top: 85px;*/
	/*font-weight: bold;*/
	/*color: #82d77e;*/
	/*text-align: center;*/
}

#logo-top,
#logo-top #logoLabel,
#logo-top .bikeStoreLogo {
	float: left;
}

#logo-top #logoLabel {
	margin-top: 16px;
	margin-left: 10px;
	font-size: large;
}


#logoLabel
{
	font-weight: bold;
	color: #82d77e;
	/* text-align: center; */
	font-size: 24px;
	-moz-transform: rotate(-3deg);
	-ms-transform: rotate(-3deg);
	-o-transform: rotate(-3deg);
	-webkit-transform: rotate(-3deg);
	transform: translate(-3px, -5px) rotate(-3deg);
}

#shoppingCart {
	float: right;
	font-size: 14pt;
	/* text-align: center; */
	/* margin: auto; */
	/* width: 200px; */
	/* margin-left: 15px; */
	/* margin-bottom: 35px; */
	margin: 8px;
}


#shoppingCart a {
	text-decoration: none;
	color: #8e8e8e;
	text-align: center;
	transition: color .5s;
	/* width: 100%; */
	/* margin: auto; */
	/* width: 225px; */
	/* display: flex; */
	/* height: 100%; */
	/* align-items: center; */
	/* -webkit-box-align: center; */
}

div.warenkorbPic {
	/* float: left; */
	/* width: 65px; */
	fill: #8e8e8e;
	transition: fill .5s;
	height: 65px;
	/* vertical-align: middle; */
	/* display: inline; */
	flex: 0 0 auto;
}


#warenkorbText {
	max-width: 215px;
	/* margin: auto; */
	/* vertical-align: middle; */
	/* display: table-cell; */
	/* height: 100%; */
	/* float: left; */
	margin-left: 10px;
	flex: 1 1 0px;
}

@media screen and (max-width: 40em) 
{
	div.warenkorbPic,
	div.warenkorbPic > svg {
		height: 34px;
	}

	#warenkorbText {
		margin-top: 2px;
		margin-left: 8px;
		max-width: 179px;
		font-size: medium;
	}

	.warenkorbAlgemein {
		float: right;
		margin-top: 8px
	}
}

#shoppingCart:hover a, #shoppingCart:hover div.warenkorbPic
{
	text-decoration: none;
	color: #82d77e;
	z-index: 100;
	fill: #82d77e;
	transition: none;
}


#shoppingCart a:hover
{
	text-decoration: none;
	color: #82d77e;
	transition: none;
}

input.suchleiste{
	/* width: 100%; */
	/* display: inline; */
	border-right: none;
	height: 35px;
	/* margin-left: 15px; */
	border-top-right-radius: 0px;
	border-bottom-right-radius: 0px;
}

#search{
	/* margin: auto; */
}

.sucheButton{
	display: inline;
	padding: 5px 5px 5px 5px;
	height: 35px;
	width: 35px;
	background-color: #82d77e;
	background-image: -webkit-linear-gradient(top, #9dff98, #82d77e);
	background-image: -moz-linear-gradient(top, #9dff98, #82d77e);
	background-position-x: 1px;
	border: 2px;
	border-color: #000000;
	border-left: 0;
	border-bottom-left-radius: 0;
	border-top-left-radius: 0;
	fill: #8e8e8e;
}

.sucheButton:hover svg{
	fill: #ffffff;
}

.flexHeader{
	width: auto;
	display: flex;
	display: -webkit-flex;
}

.flexFillWidth{
	-webkit-flex: 1;
	flex: 1;
}

h1{
	font-size: 24px;
	color: #000000;
	margin-left: 10px;
}

p{
	margin-left: 5px;
	margin-right: 5px;
}

h2{
	margin-left: 5px;
	font-size: 20px ;
}

p.link{
	float:right;
}

.bikeStoreLogo.small {
    height: 42px;
    float: left;
}

#logoLabel.small {
    float: left;
    margin-left: 10px;
    margin-top: 9px;
    font-size: 18px;
}

.navbar-toggle {
    margin-top: 4px;
    margin-right: 8px;
    font-weight: bold;
    color: white;
}

.navbar-toggle:hover {
    color: #e9e9e9;
}

.navbar-toggle:active {
    margin-top: 5px;
    margin-right: 7px;
}

.bikeStoreLogo
{
	height: 80px;
}

#logo-top .bikeStoreLogo {
	margin-top:2px;
	height: 45px;
}

.bikeStoreLogo svg
{
	height: 100%;
}

.bikeStoreLogo path {
	transform-origin: 250px 250px;
	animation: rotating 6s linear infinite;
}

a, .btn-link{
	color: #82d77e;
	text-decoration: none;
}

a:hover, .btn-link:hover{
	color: #8e8e8e;
}

@keyframes rotating {
  from {
    -ms-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  to {
    -ms-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.bikeShopDefaultBtn{
	border: none;
	text-shadow: none;
	background-color: #82d77e;
	background-image: -webkit-linear-gradient(top, #9dff98, #82d77e);
	background-image: -moz-linear-gradient(top, #9dff98, #82d77e);
	max-height: 30pt;
	max-width: 30pt;
	padding: 6px;
	margin-left: 3px;
	margin-bottom: 3px;
}

.bikeShopDefaultBtn:hover svg, .bikeShopDefaultBtn:hover{
	font-weight: bold;
	background-position: 0 0;
	background-blend-mode: darken;
	color: #ffffff;
	fill: #ffffff;
	max-height: 30pt;
	max-width: 30pt;
}

.warenkorbAlgemein{
	display: flex;
	align-items: center;
	-webkit-box-align: center;
}

.warenkorbPic > svg{
	height: 65px;
}

.gridItem {
    display: block;
    padding: 20px;
}

